Version 0.4
 Add obdgui
 obdgpslogger: Add option to spam engine info to stdout
 obdgpslogger: Accept SIGUSR{1,2} to start and stop trips
 obdgpslogger: always create gps table to avoid SQL breakage
 obdgpslogger: optimisation options
 obdgpslogger: printf/fprintf(stderr) tidying
 obdgpslogger: clean up trip handling when going through gui
 obdgpslogger: Add log window in GUI that shows all output from logger

Version 0.3 (released 2009-04-01)
 Add obd2csv
 obdgpslogger: samplerate [-a] now works
 obdgpslogger: time inserted as a real for sub-second usefulness
 obdgpslogger: getobdvalue returns a useful status value
 obdgpslogger: support for "trips", when the engine stops and starts
 obd2kml: do something useful with trips

Version 0.2 (released 2009-03-24)
 Change obdlogger binary to obdgpslogger
 CMake sniglets to make it more fink-friendly

Version 0.1 (released 2009-03-23)
 Initial Release